--- a/SmartMeterEstimator/SmartMeterEstimator.csproj
+++ b/SmartMeterEstimator/SmartMeterEstimator.csproj
@@ -8,9 +8,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="20015323531_20221222_20240625_20240626210349_SAPN_DETAILED.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="20015323531_20221222_20240625_20240626210349_SAPN_DETAILED.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Plotly.NET" Version="5.0.0" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="20015323531_20221222_20240701_20240702163730_SAPN_DETAILED.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
