Input wsn't being used, now it is

--- a/SmartMeterEstimator/SmartMeterEstimator.csproj
+++ b/SmartMeterEstimator/SmartMeterEstimator.csproj
@@ -28,6 +28,9 @@
     <None Update="20015323531_20221222_20240701_20240702163730_SAPN_DETAILED.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="20015323531_20230131_20250130_20250131144349_SAPN_DETAILED.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
