Added lame ass landing page day navigation

--- a/SmartMeterEstimator/SmartMeterEstimator.csproj
+++ b/SmartMeterEstimator/SmartMeterEstimator.csproj
@@ -35,6 +35,9 @@
     <None Update="20015323531_20230131_20250130_20250131144349_SAPN_DETAILED.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="20015323531_20230315_20250314_20250315152354_SAPN_DETAILED.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
