Added quality of life fixes: 1. if no file specified, show the most recent csv 2. if no start/end specified, show the full file range. 3. if no date specified in detail view, show the last date in the file. 4. in detailed view, show when you've reached the last or first record.

--- a/SmartMeterEstimator/Properties/launchSettings.json
+++ b/SmartMeterEstimator/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "SmartMeterEstimator": {
-      "commandName": "Project",
-      "commandLineArgs": "-i 20015323531_20230315_20250314_20250315152354_SAPN_DETAILED.csv --start 2024-03-01 --end 2025-03-01"
+      "commandName": "Project"
     }
   }
 }
